--- a/AngularStarterKitWeb/src/index.html
+++ b/AngularStarterKitWeb/src/index.html
@@ -6,11 +6,14 @@
   <title>AngularStarterKit</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/izenda/izenda-ui.css">
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>Loading...</app-root>
 </body>
 
 </html>
